AC_INIT([ledborg-client], [0.1.0], [the.mighty.ug@gmail.com], [ledborg-client])
AC_CONFIG_SRCDIR([Makefile.am])
AC_CONFIG_HEADERS(config.h)
AM_INIT_AUTOMAKE([dist-bzip2])
AM_MAINTAINER_MODE

AC_PROG_CC
AM_PROG_CC_C_O
AC_DISABLE_STATIC
AC_PROG_LIBTOOL

AC_CHECK_LIB(gthread-2.0, g_thread_init)

LT_INIT

AC_PATH_PROG(VALAC, valac, valac)
AC_SUBST(VALAC)

AH_TEMPLATE([GETTEXT_PACKAGE], [Package name for gettext])
GETTEXT_PACKAGE=ledborg-client
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE")
AC_SUBST(GETTEXT_PACKAGE)
AM_GLIB_GNU_GETTEXT
IT_PROG_INTLTOOL([0.35.0])

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)

GLIB_REQUIRED=2.12.0

PKG_CHECK_MODULES(GLIB, [glib-2.0 >= $GLIB_REQUIRED])
PKG_CHECK_MODULES(GOBJECT, [gobject-2.0 >= $GLIB_REQUIRED])
PKG_CHECK_MODULES(GIO, [gio-2.0 >= $GLIB_REQUIRED])
PKG_CHECK_MODULES(LIBSOUP, [libsoup-2.4])
PKG_CHECK_MODULES(LIBLEDBORG, [libledborg >= 0.2])

LEDBORG_CLIENT_CFLAGS="$GLIB_CFLAGS $GOBJECT_CFLAGS $GIO_CFLAGS $LIBSOUP_CFLAGS $LIBLEDBORG_CFLAGS"
LEDBORG_CLIENT_LIBS="$GLIB_LIBS $GOBJECT_LIBS $GIO_LIBS $LIBSOUP_LIBS $LIBLEDBORG_LIBS"
AC_SUBST(LEDBORG_CLIENT_CFLAGS)
AC_SUBST(LEDBORG_CLIENT_LIBS)


AC_CONFIG_FILES([Makefile
	src/Makefile
	po/Makefile.in])

AC_OUTPUT
